# treinow

./: .dockerignore  .gitattributes  .gitignore  Caddyfile  Dockerfile  README.md
app/: .claude.json  .dockerignore  .env.example  .gitignore  ERROR.md  PROJECT_STRUCTURE_INSTRUCTIONS.md  README.md  compose.yaml  package-lock.json  package.json
app/app/Models/: Exercise.php  User.php  UserPreference.php  WorkoutDay.php  WorkoutExerciseItem.php
app/app/Providers/: AppServiceProvider.php
app/app/Services/: ExerciseSwapService.php  GeminiService.php
app/app/Support/: ExerciseClassifier.php
app/apps/api/: Dockerfile  package.json  pyproject.toml  tsconfig.json
app/apps/api/alembic/: env.py
app/apps/api/alembic/versions/: 0001_initial.py
app/apps/api/app/: analytics.py  config.py  db.py  main.py  mappers.py  models.py  numeric.py  plan.py  privacy.py  security.py  worker.py  workout_engine.py
app/apps/api/app/routers/: auth.py  exercises.py  jobs.py  meta.py  trainer.py  workouts.py
app/apps/api/app/schemas/: auth.py  common.py  meta.py
app/apps/api/src/: analytics.test.ts  analytics.ts  config.ts  infra.ts  plan.test.ts  plan.ts  privacy.ts  security.ts  server.ts  worker.ts  workout.test.ts  workout.ts
app/apps/api/tests/: conftest.py  test_analytics.py  test_integration_db.py  test_plan.py  test_privacy.py  test_security.py  test_workout_engine.py
app/catalog/: exercise-overrides.json  exercises.pt-BR.json
app/routes/: web.php
app/scripts/: build-catalog.mjs  build-review-sheets.py  create-dev-env.mjs  verify-catalog.mjs
docker/: entrypoint.sh
(+43 files in other folders)
